networkname.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: allow-traffic-from-data-namespace-to-dev-namespace 
  namespace: dev 
spec:
  podSelector:
    matchLabels:
      app: dev-nginx 
  policyTypes:
   - Ingress
  ingress:
    - from:
        - namespaceSelector:
             matchLabels:
                kubernetes.io/metadata.name:  data
          podSelector:
            matchLabels:
               app: data-nginx 
      ports:
        - protocol: TCP 
          port: 80
